--- a/departments/aa/placement.html
+++ b/departments/aa/placement.html
@@ -226,6 +226,135 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>ARJUN SINGH </td>
+    <td>220198212251</td>
+    <td>9463347898</td>
+    <td>GREWAL ARCHITECTS, MODEL TOWN PHASE-III, OPP. ASHOKA RESORT, BOOTH NO. 31, BATHINDA</td>
+    <td>0.6</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>DIKSHA BANSAL</td>
+    <td>220198212253</td>
+    <td>9878645998</td>
+    <td>DESIGN AND SPACE, #16247, MAIN STREET NO. 10, GURU GOBIND SINGH NAGAR, OPP. DELHI SWEET HOUSE, BARNALA ROAD, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>GURVEER SINGH</td>
+    <td>220198212255</td>
+    <td>8968254016</td>
+    <td>SEHYOG ARCHITECTS &amp; INTERIOR DESIGNERS, MCB Z-3/02087, SARASWATI STREET, AMRIK SINGH ROAD, BATHINDA</td>
+    <td>0.6</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>KAMAL SINGH</td>
+    <td>220198212261</td>
+    <td>9877368121</td>
+    <td>VIKAAS BANSAL AND ASSOCIATES, BACK SIDE HOTEL CELEBRATION, HANUMAN CHOWK, BATHINDA</td>
+    <td>0.96</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2024-25</td>
+    <td>KHUSHAL KUMAR </td>
+    <td>220198212262</td>
+    <td>7340811974</td>
+    <td>STUDIO VECTORS, 100' ROAD, SURAJGIRI TEMPLE, NEW SHAKTI NAGAR, BATHINDA</td>
+    <td>0.72</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>2024-25</td>
+    <td>KHUSHDEEP </td>
+    <td>220198212263</td>
+    <td>7717692977</td>
+    <td>INFINITY DESIGN, NEAR BABA FARID COLLEGE, MAIN BUS STAND, DEON, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>2024-25</td>
+    <td>NISHA</td>
+    <td>220198212266</td>
+    <td>6283353563</td>
+    <td>HUDSON ARCHITECTS, NEAR SHRI ANNAPURNA MANDIR, AMRIK SINGH ROAD,BATHINDA </td>
+    <td>0.6</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>2024-25</td>
+    <td>RANDEEP SINGH </td>
+    <td>220198212268</td>
+    <td>7814160723</td>
+    <td>STUDIO VECTORS, 100' ROAD, SURAJGIRI TEMPLE, NEW SHAKTI NAGAR, BATHINDA</td>
+    <td>0.72</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>2024-25</td>
+    <td>ROHAN </td>
+    <td>220198212269</td>
+    <td>9988134670</td>
+    <td>BALAJI DESIGNER HUB, SARABHA NAGAR,STREET NO. 1, BHATTI ROAD, BATHINDA</td>
+    <td>0.72</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>2024-25</td>
+    <td>SANJAY KUMAR </td>
+    <td>220198212271</td>
+    <td>7717515140</td>
+    <td>GREWAL ARCHITECTS, MODEL TOWN PHASE-III, OPP. ASHOKA RESORT, BOOTH NO. 31, BATHINDA</td>
+    <td>0.96</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>2024-25</td>
+    <td>SEWAKPREET SINGH </td>
+    <td>220198212272</td>
+    <td>8054670645</td>
+    <td>SEHYOG ARCHITECTS &amp; INTERIOR DESIGNERS, MCB Z-3/02087, SARASWATI STREET, AMRIK SINGH ROAD, BATHINDA</td>
+    <td>0.6</td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>2024-25</td>
+    <td>SUMIT BANSAL </td>
+    <td>220198212274</td>
+    <td>6284109195</td>
+    <td>DESIGN AND SPACE, #16247, MAIN STREET NO. 10, GURU GOBIND SINGH NAGAR, OPP. DELHI SWEET HOUSE, BARNALA ROAD, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>13</td>
+    <td>2024-25</td>
+    <td>SUNAINA</td>
+    <td>220198212275</td>
+    <td>8264850997</td>
+    <td>INFINITY DESIGN, NEAR BABA FARID COLLEGE, MAIN BUS STAND, DEON, BATHINDA</td>
+    <td>0.78</td>
+  </tr>
+  <tr>
+    <td>14</td>
+    <td>2024-25</td>
+    <td>TANVI BHANDARI </td>
+    <td>220198212278</td>
+    <td>8837638430</td>
+    <td>ATINDER ARCHITECTS, NEAR CLOCK TOWER, 100' ROAD, BATHINDA</td>
+    <td>0.78</td>
+  </tr>
+  <tr>
+        <td colspan="7"><hr/></td>
+     </tr>
                                   <tr>
         <td>1</td>
         <td>2023-24</td>
@@ -551,6 +680,79 @@
                              </tr>
                             </thead>
                              <tbody>
+                                <tr>
+    <td>1</td>
+    <td>GREWAL ARCHITECTS, MODEL TOWN PHASE-III, OPP. ASHOKA RESORT, BOOTH NO. 31, BATHINDA</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>0.96</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>DESIGN AND SPACE, #16247, MAIN STREET NO. 10, GURU GOBIND SINGH NAGAR, OPP. DELHI SWEET HOUSE, BARNALA ROAD, BATHINDA</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>SEHYOG ARCHITECTS &amp; INTERIOR DESIGNERS, MCB Z-3/02087, SARASWATI STREET, AMRIK SINGH ROAD, BATHINDA</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>0.6</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>VIKAAS BANSAL AND ASSOCIATES, BACK SIDE HOTEL CELEBRATION, HANUMAN CHOWK, BATHINDA</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>0.96</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>STUDIO VECTORS, 100' ROAD, SURAJGIRI TEMPLE, NEW SHAKTI NAGAR, BATHINDA</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>0.72</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>INFINITY DESIGN, NEAR BABA FARID COLLEGE, MAIN BUS STAND, DEON, BATHINDA</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>INFINITY DESIGN, NEAR BABA FARID COLLEGE, MAIN BUS STAND, DEON, BATHINDA</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>0.78</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>HUDSON ARCHITECTS, NEAR SHRI ANNAPURNA MANDIR, AMRIK SINGH ROAD,BATHINDA </td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>0.6</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>BALAJI DESIGNER HUB, SARABHA NAGAR,STREET NO. 1, BHATTI ROAD, BATHINDA</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>0.72</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>ATINDER ARCHITECTS, NEAR CLOCK TOWER, 100' ROAD, BATHINDA</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>0.78</td>
+  </tr>
+  <tr>
+                                   <td colspan="5"><hr/></td>
+                                </tr>
                                 <tr>
                                     <td>1</td>
                                     <td>EDEN RCHITECTS, BATHINDA</td>
