--- a/departments/ce/placement.html
+++ b/departments/ce/placement.html
@@ -226,6 +226,135 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>AMAN KUMAR</td>
+    <td>220195112015</td>
+    <td>7717450684</td>
+    <td>CENTRAL UNI BTI</td>
+    <td>1.5 L</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>BHUMI</td>
+    <td>220195112025</td>
+    <td>6283086200</td>
+    <td>SHELTER ARCHITOS</td>
+    <td>1.5 L</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>HARDIK</td>
+    <td>220195112035</td>
+    <td>9530706089</td>
+    <td>GEO MEDIA LAB</td>
+    <td>1.44 L</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>INDERJEET SINGH</td>
+    <td>220195112043</td>
+    <td>9876318095</td>
+    <td>GEO MEDIA LAB</td>
+    <td>1.44 L</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2024-25</td>
+    <td>KARAMJIT KAUR</td>
+    <td>220195112046</td>
+    <td>9781393050</td>
+    <td>DIGI TECH.</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>2024-25</td>
+    <td>MANINDER SINGH</td>
+    <td>220195112050</td>
+    <td>9779425309</td>
+    <td>MAAN ARCH</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>2024-25</td>
+    <td>MOHIT TANWAR</td>
+    <td>220195112052</td>
+    <td>9779425309</td>
+    <td>MAAN ARCH</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>2024-25</td>
+    <td>NOORPREET SINGH</td>
+    <td>220195112055</td>
+    <td>7589033671</td>
+    <td>MAAN ARCH</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>2024-25</td>
+    <td>PARDEEP SINGH</td>
+    <td>220195112056</td>
+    <td>7087571722</td>
+    <td>MAAN ARCH</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>2024-25</td>
+    <td>RAJDEEP SING</td>
+    <td>220195112060</td>
+    <td>9592235091</td>
+    <td>DIGI TECH.</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>2024-25</td>
+    <td>SONELAL CHAUHAN</td>
+    <td>220195112071</td>
+    <td>8114046354</td>
+    <td>STAR CONCRETE</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>2024-25</td>
+    <td>VIPIN KUMAR RAHUL</td>
+    <td>220195112073</td>
+    <td>7856957853</td>
+    <td>PANIPAT REFINARY</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>13</td>
+    <td>2024-25</td>
+    <td>SUNAINA</td>
+    <td>220198212275</td>
+    <td>8264850997</td>
+    <td>INFINITY DESIGN, NEAR BABA FARID COLLEGE, MAIN BUS STAND, DEON, BATHINDA</td>
+    <td>0.78</td>
+  </tr>
+  <tr>
+    <td>14</td>
+    <td>2024-25</td>
+    <td>TANVI BHANDARI </td>
+    <td>220198212278</td>
+    <td>8837638430</td>
+    <td>ATINDER ARCHITECTS, NEAR CLOCK TOWER, 100' ROAD, BATHINDA</td>
+    <td>0.78</td>
+  </tr>
+  <tr>
+                                        <td colspan="7"><hr/></td>
+                                        </tr>
                                     <tr>
                                         <td>1</td>
                                         <td>2023-24</td>
@@ -868,6 +997,58 @@
                              </tr>
                             </thead>
                              <tbody>
+                                <tr>
+    <td>1</td>
+    <td>CENTRAL UNI BTI</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.8 L</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>SHELTER ARCHITOS</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.8 L</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>GEO MEDIA LAB</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>1.44 L</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>DIGI TECH.</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>1.44 L</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>MAAN ARCH</td>
+    <td>2024-25</td>
+    <td>4</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>STAR CONCRETE</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.2 L</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>PANIPAT REFINARY</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.2 L</td>
+  </tr>
+   <tr>
+                                    <td colspan="5"><hr/></td>
+                                </tr>   
                                 <tr>
                                     <td>1</td>
                                     <td>Sunrise Const. Kotkapura</td>
