--- a/departments/cse/placement.html
+++ b/departments/cse/placement.html
@@ -225,6 +225,117 @@
                             </thead>
                             <tbody>
                                 <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>KOMAL RANI</td>
+    <td>220199512339</td>
+    <td>7717604670</td>
+    <td>TECHNOSPACE BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>LACHHMI KUMARI</td>
+    <td>220199512341</td>
+    <td>9661797160</td>
+    <td>TECHNOSPACE BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>LOVEPREET SINGH</td>
+    <td>220199512344</td>
+    <td>7901731761</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>MAYANK</td>
+    <td>220199512348</td>
+    <td>8054405687</td>
+    <td>TECHNOSPACE BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2024-25</td>
+    <td>POOJA</td>
+    <td>220199512356</td>
+    <td>9530557006</td>
+    <td>TECHNOSPACE BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>2024-25</td>
+    <td>PREETINDER KAUR</td>
+    <td>220199512360</td>
+    <td>8968029792</td>
+    <td>TECHNOSPACE BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>2024-25</td>
+    <td>RAVINDER SINGH</td>
+    <td>220199512362</td>
+    <td>6283769662</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>2024-25</td>
+    <td>GURSAHIB SINGH</td>
+    <td>220199580483</td>
+    <td>7814282320</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>2024-25</td>
+    <td>GARIMA</td>
+    <td>220199580481</td>
+    <td>9988633904</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>2024-25</td>
+    <td>MEENAL</td>
+    <td>220199512349</td>
+    <td>6280909187</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION BATHINDA </td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>2024-25</td>
+    <td>PRABHNOOR SINGH </td>
+    <td>220199512358</td>
+    <td>6280204505</td>
+    <td>DIGI TECH BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>2024-25</td>
+    <td>CHIRAG SINGLA</td>
+    <td>220199580480</td>
+    <td>6239288865</td>
+    <td>DIGI TECH BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+                                    <td colspan="7"><hr/></td>
+                                </tr>
+                                <tr>
                                     <td>1</td>
                                     <td>2023-24</td>
                                     <td>AMANDEEP KAUR</td>
@@ -856,25 +967,49 @@
                             </thead>
                              <tbody>
                                 <tr>
+    <td>1</td>
+    <td>TECHNOSPACE BATHINDA </td>
+    <td>2024-25</td>
+    <td>5</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION BATHINDA </td>
+    <td>2024-25</td>
+    <td>5</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>DIGI TECH BATHINDA</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>1.2</td>
+  </tr>
+   <tr>
+                                    <td colspan="5"><hr/></td>
+                                </tr>
+                                <tr>
                                     <td>1</td>
                                     <td>MIRACULOUS SOFT SOLUTINS PVT. LTD MOHALI</td>
                                     <td>2023-24</td>
                                     <td>3</td>
-                                    <td>1.44 LAC</td>
+                                    <td>1.44</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
                                     <td>TECHNOSPACE INDAATION &amp; SOLUTIONS PVT. LTD BATHINDA</td>
                                     <td>2023-24</td>
                                     <td>4</td>
-                                    <td>1.2 LAC</td>
+                                    <td>1.2</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
                                     <td>SOLITAIRE INFOSYSTEMS PVT. LTD MOHALI </td>
                                     <td>2023-24</td>
                                     <td>5</td>
-                                    <td>1.8 LAC</td>
+                                    <td>1.8</td>
                                 </tr>
                                 <tr>
                                     <td colspan="5"><hr/></td>
