--- a/departments/ee/faculty.html
+++ b/departments/ee/faculty.html
@@ -423,7 +423,7 @@
                         <div class="flip-card">
                           <div class="flip-card-inner">
                             <div class="flip-card-front">
-                              <img src="../../assets/images/faculty/jagdeep.jpg" alt="Avatar">
+                              <img src="../../assets/images/faculty/jagdeep_kamboj.jpeg" alt="Avatar">
                               <h3>Er. Jagdeep Singh Kamboj</h3>
                               <h5 style="color:white;">Lecturer</h5>
                             </div>
