--- a/departments/ee/placement.html
+++ b/departments/ee/placement.html
@@ -226,6 +226,191 @@
                             </thead>
                             <tbody>
                                 <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>Jagdip Singh</td>
+    <td>220195212076</td>
+    <td>9781274367</td>
+    <td>AGGARWAL STEEL INDUSTRIES</td>
+    <td>1.56</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>Amitesh Kumar Mishra</td>
+    <td>220195212080</td>
+    <td>7897681962</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>Ankit Kumar</td>
+    <td>220195212082</td>
+    <td>7888377352</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>Anmol Singh</td>
+    <td>220195212083</td>
+    <td>9814429469</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2024-25</td>
+    <td>Arshdeep Singh</td>
+    <td>220195212084</td>
+    <td>8195030085</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>2024-25</td>
+    <td>Babbu Ram</td>
+    <td>220195212087</td>
+    <td>9780597398</td>
+    <td>AGGARWAL STEEL INDUSTRIES</td>
+    <td>1.56</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>2024-25</td>
+    <td>Deepush kumar</td>
+    <td>220195212089</td>
+    <td>7986103050</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>2024-25</td>
+    <td>Gursharndeep Singh</td>
+    <td>220195212098</td>
+    <td>7340775096</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>2024-25</td>
+    <td>Lucky</td>
+    <td>220195212111</td>
+    <td>7986048240</td>
+    <td>MAHASHAKTI ENERGY LTD</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>2024-25</td>
+    <td>Palwinder Singh</td>
+    <td>220195212114</td>
+    <td>6284688655</td>
+    <td>AGGARWAL STEEL INDUSTRIES</td>
+    <td>1.56</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>2024-25</td>
+    <td>Parmashwar Singh</td>
+    <td>220195212115</td>
+    <td>7340743013</td>
+    <td>PS INDUSTRIES LTD</td>
+    <td>1.02</td>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>2024-25</td>
+    <td>Prince Kumar</td>
+    <td>220195212118</td>
+    <td>6239543746</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>13</td>
+    <td>2024-25</td>
+    <td>Raj Kumar</td>
+    <td>220195212122</td>
+    <td>6283381675</td>
+    <td>MAHASHAKTI ENERGY LTD</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>14</td>
+    <td>2024-25</td>
+    <td>Rajinder Singh</td>
+    <td>220195212123</td>
+    <td>9914592564</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>15</td>
+    <td>2024-25</td>
+    <td>Ravi kumar</td>
+    <td>220195212128</td>
+    <td>8544820418</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>16</td>
+    <td>2024-25</td>
+    <td>Sameer kumar</td>
+    <td>220195212130</td>
+    <td>7658891985</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>17</td>
+    <td>2024-25</td>
+    <td>Surinderpal Paswan</td>
+    <td>220195212133</td>
+    <td>7837341471</td>
+    <td>MAHASHAKTI ENERGY LTD</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>18</td>
+    <td>2024-25</td>
+    <td>Amanpreet </td>
+    <td>220195280453</td>
+    <td>7719714423</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>19</td>
+    <td>2024-25</td>
+    <td>Chander Kishore</td>
+    <td>220195280454</td>
+    <td>8847466362</td>
+    <td>RANE STEERING SYSTEMS PVT LTD&nbsp;&nbsp;</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>20</td>
+    <td>2024-25</td>
+    <td>Harjeet Singh</td>
+    <td>220195280456</td>
+    <td>7888615792</td>
+    <td>GOVT JOB GRAMIN DAK SEWA</td>
+    <td>1.92</td>
+  </tr>
+   <tr>
+                                    <td colspan="7">
+                                        <hr/>
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td>1</td>
                                     <td>2023-24</td>
                                     <td>Vikas</td>
@@ -1080,6 +1265,44 @@
                              </tr>
                             </thead>
                              <tbody>
+                                <tr>
+    <td>1</td>
+    <td>MAHASHAKTI ENERGY LTD. </td>
+    <td>2024-25</td>
+    <td>3</td>
+    <td>1.20</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>AGGRAWAL STEEL INDUSTRIES</td>
+    <td>2024-25</td>
+    <td>3</td>
+    <td>1.56</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>RANE STEERING SYSTEMS</td>
+    <td>2024-25</td>
+    <td>12</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>PS INDUSTRIES LTD. </td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.02</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>GOVT. JOB GRAMIN DAK SEWA</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.92</td>
+  </tr>
+  <tr>
+                                    <td colspan="5"><hr/></td>
+                                </tr>
                                 <tr>
                                     <td>1</td>
                                     <td>J.R. Transformers Pvt. Ltd</td>
