other pages being updated

--- a/scholarships/pms.html
+++ b/scholarships/pms.html
@@ -199,7 +199,7 @@
                 <div class="down-content">
                   <h4>DR. BR Ambedkar SC Post Matric Scholarship Scheme (<a href="http://scholarships.punjab.gov.in/Default.aspx" target="_blank">Web Portal</a>)</h4>
                   <p> <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
-                  <a href="../assets/files/NewPMSC ScholarshipScheme.pdf" target="_blank">Notification- Dr. BR Ambedkar SC Scholarship Scheme</a> </p>
+                  <a href="https://scholarships.punjab.gov.in/sp/Default.aspx" target="_blank">Dr. BR Ambedkar SC Scholarship Portal- Punjab</a> </p>
                   <p class="description">
                     The Objective of this scheme is to appreciably increase the Gross Enrollment Ratio of SC Students in higher education with a focus on those from the poorest households, by providing financial assistance at post-matriculation or post-secondary stage to enable them to complete their education. <br/><br/>
                     <!-- <span style="color:#9c2c34;font-weight:bold;">Till Date 400+ Students have been benefited from this Scholarship.</span> -->
