--- a/sub_header/citizen_charter.html
+++ b/sub_header/citizen_charter.html
@@ -206,7 +206,7 @@
                   <p> <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
                   <a href="http://www.punjabteched.net/info-act/Citizen_Charter.pdf" target="_blank">Citizen Charter of Department of Technical Education &amp; Industrial Training</a> </p>
 
-                  <table class="table table-striped" style="margin-top:40px;">
+                  <!-- <table class="table table-striped" style="margin-top:40px;">
                     <tr>
                         <th colspan="4" style="text-align: center;">
 
@@ -244,7 +244,7 @@
 
                   </tr>
 
-                </table>
+                </table> -->
 
                   <h4 style="margin-top:40px;">RTI Services</h4>
 
