--- a/departments/cse/contact.html
+++ b/departments/cse/contact.html
@@ -261,7 +261,7 @@
 
                    </div>
                    <div class="contact-dept">
-                    <!-- <div class="contact-info">
+                    <div class="contact-info">
                       <p>
                           <h5>Dr. Sukhpal Kaur </h5> <br>
                           Lecturer
@@ -271,7 +271,7 @@
                          Email: <a href="mailto:sukhpal.dhillion@punjab.gov.in">sukhpal.dhillion@punjab.gov.in</a>
                          </p>
 
-                     </div> -->
+                     </div>
                        <div class="contact-info">
                         <p>
                             <h5>Er. Deepti </h5> <br>
