--- a/departments/cse/faculty.html
+++ b/departments/cse/faculty.html
@@ -361,7 +361,7 @@
 
                     </div>
                     <div class="faculty-profile">
-                      <!-- <div class="flip-card">
+                      <div class="flip-card">
                         <div class="flip-card-inner">
                           <div class="flip-card-front">
                             <img src="../../assets/images/faculty/sukhpal.jpg" alt="Avatar">
@@ -390,7 +390,7 @@
                             </div>
                           </div>
                         </div>
-                      </div> -->
+                      </div>
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
