--- a/departments/ece/placement.html
+++ b/departments/ece/placement.html
@@ -224,6 +224,54 @@
                             </thead>
                             <tbody>
                                 <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>AMAN KUMAR</td>
+    <td>220196112221</td>
+    <td>6206721989</td>
+    <td>TEKNI FLEX PVT LTD, GREATER NOIDA </td>
+    <td>1.44</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>LOVPREET PAL</td>
+    <td>220196112230</td>
+    <td>6280466513</td>
+    <td>RANE STEERING SYSTEM-PVT LTD UNDER MACRON LOGI SERVICES . PVT.LMT. GUJRAT </td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>PANKAJ KUMAR </td>
+    <td>220196112235</td>
+    <td>9729026936</td>
+    <td>RANE STEERING SYSTEM-PVT LTD UNDER MACRON LOGI SERVICES . PVT.LMT. GUJRAT </td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>ARASHDEEP SINGH </td>
+    <td>220196180467</td>
+    <td>9914659117</td>
+    <td>BCL PVT.LMT</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2024-25</td>
+    <td>SUKDEEP KAUR </td>
+    <td>220196112247</td>
+    <td>8437035297</td>
+    <td>RANE STEERING SYSTEM-PVT LTD UNDER MACRON LOGI SERVICES . PVT.LMT. GUJRAT </td>
+    <td>1.86</td>
+  </tr>
+   <tr>
+                                <td colspan="7"><hr/></td>
+                            </tr>
+                                <tr>
                                     <td>1</td>
                                     <td>2023-24</td>
                                     <td>JAI SUNARIA</td>
@@ -602,6 +650,30 @@
                              </tr>
                             </thead>
                              <tbody>
+                                <tr>
+    <td>1</td>
+    <td>RANE STEERING SYSTEM-PVT LTD UNDER MACRON LOGI SERVICES . PVT.LMT. GUJRAT </td>
+    <td>2024-25</td>
+    <td>3</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>TEKNI FLEX PVT LTD, GREATER NOIDA </td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.44</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>BCL BATHINDA </td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.86</td>
+  </tr>
+   <tr>
+                                    <td colspan="5"><hr/></td>
+                                </tr>
                                 <tr>
                                     <td>1</td>
                                     <td>CENTUM ELECTRONICS LIMITED </td>
