--- a/departments/it/contact.html
+++ b/departments/it/contact.html
@@ -212,6 +212,17 @@
                    <div class="contact-dept">
                     <div class="contact-info">
                         <p>
+                            <h5>Er. Manjit Singh Bhullar </h5> <br>
+                            Head of Department
+                            <br/>
+                            Mob: 94161-47708
+                            <br/>
+                           Email: <a href="mailto:harkamaljeet.kaur05@punjab.gov.in">harkamaljeet.kaur05@punjab.gov.in</a>
+                           </p>
+
+                       </div>
+                    <div class="contact-info">
+                        <p>
                             <h5>Er. Magandeep Kaur </h5> <br>
                             Sr. Lecturer(Officer Incharge)
                             <br/>
@@ -234,7 +245,10 @@
                            </p>
 
                        </div>
-                       <div class="contact-info">
+
+                   </div>
+                   <div class="contact-dept">
+                    <div class="contact-info">
                         <p>
                             <h5>Er. Harkamaljeet Kaur </h5> <br>
                             Lecturer
@@ -245,8 +259,6 @@
                            </p>
 
                        </div>
-                   </div>
-                   <div class="contact-dept">
                        <div class="contact-info">
                         <p>
                             <h5>Er. Parvesh Kumar </h5> <br>
