--- a/departments/it/placement.html
+++ b/departments/it/placement.html
@@ -226,6 +226,72 @@
                             </thead>
                             <tbody>
                                 <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>AZIZ YADAV</td>
+    <td>220199012283</td>
+    <td>7001768088</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>VINIT INDORA</td>
+    <td>220199012308</td>
+    <td>7973405571</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>GURPREET KAUR</td>
+    <td>220199012289</td>
+    <td>6280835105</td>
+    <td>COMPASS TECHNOLOGIES, CHANDIGARH</td>
+    <td>0.96</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>SALONI</td>
+    <td>220199012305</td>
+    <td>7009587648</td>
+    <td>COMPASS TECHNOLOGIES, CHANDIGARH</td>
+    <td>0.96</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2024-25</td>
+    <td>PRIYANKA</td>
+    <td>220199012303</td>
+    <td>8146605984</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>2024-25</td>
+    <td>HARPREET SINGH</td>
+    <td>220199012293</td>
+    <td>9478976594</td>
+    <td>COMPASS TECHNOLOGIES, CHANDIGARH</td>
+    <td>1.08</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>2024-25</td>
+    <td>ANKIT KUMAR</td>
+    <td>220199080472</td>
+    <td>6283057340</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+   <tr>
+                                    <td colspan="7"><hr/></td>
+                                </tr>
+                                <tr>
                                     <td>1</td>
                                     <td>2023-24</td>
                                     <td>KULJINDER SHARMA</td>
@@ -577,6 +643,23 @@
                              </tr>
                             </thead>
                              <tbody>
+                                 <tr>
+    <td>1</td>
+    <td>COMPASS TECHNOLOGIES, CHANDIGARH</td>
+    <td>2024-25</td>
+    <td>3</td>
+    <td>0.96 , 1.08</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>INFOWIZ A SOFTWARE SOLUTION, BATHINDA</td>
+    <td>2024-25</td>
+    <td>4</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+                                    <td colspan="5"><hr/></td>
+                                </tr>
                                 <tr>
                                     <td>1</td>
                                     <td>Compass Technologies, Chandigarh</td>
