--- a/departments/me/placement.html
+++ b/departments/me/placement.html
@@ -224,6 +224,99 @@
                             </thead>
                             <tbody>
                                 <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>AADITY</td>
+    <td>220195312139</td>
+    <td>7973013128</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>ARVINDER</td>
+    <td>220195312147</td>
+    <td>9465768723</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>HARINDER SINGH</td>
+    <td>220195312154</td>
+    <td>6239290609</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>HIMANSHU GHAI</td>
+    <td>220195312160</td>
+    <td>8427156607</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2024-25</td>
+    <td>INDERJEET SINGH</td>
+    <td>220195312161</td>
+    <td>8264523018</td>
+    <td>ISDVT, BATHINDA</td>
+    <td>1.2</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>2024-25</td>
+    <td>KUNDAN KUMAR RAM</td>
+    <td>220195312168</td>
+    <td>8728812531</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>2024-25</td>
+    <td>SHAKTI SINGH</td>
+    <td>220195312194</td>
+    <td>7508667517</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>2024-25</td>
+    <td>SHYAM SUNDER</td>
+    <td>220195312196</td>
+    <td>9478095008</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>2024-25</td>
+    <td>AMRITPAL SINGH</td>
+    <td>220195380462</td>
+    <td>9023698905</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>2024-25</td>
+    <td>AKASHDEEP SINGH</td>
+    <td>210195301805</td>
+    <td>7710535643</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+                                    <td colspan="7"><hr/></td>
+                                </tr>
+                                <tr>
                                     <td>1</td>
                                     <td>2023-24</td>
                                     <td>Priyanshu </td>
@@ -526,171 +619,7 @@
                               <tr>
                                 <td colspan="7"><hr/></td>
                             </tr>
-                                  <tr>
-                                    <td>1</td>
-                                    <td>2021-22</td>
-                                    <td>AMANDEEP SINGH</td>
-                                    <td>190195302125</td>
-                                    <td>7889036018</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>2021-22</td>
-                                    <td>RITOSH KUMAR</td>
-                                    <td>190195302168</td>
-                                    <td>9779797695</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>2021-22</td>
-                                    <td>ROBIN SINGH</td>
-                                    <td>190195302169</td>
-                                    <td>6239017302</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>2021-22</td>
-                                    <td>HARJOT KUMAR SHARMA</td>
-                                    <td>190195302146</td>
-                                    <td>9463951588</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>2021-22</td>
-                                    <td>LOVEJEET SINGH</td>
-                                    <td>190195302155</td>
-                                    <td>9878749199</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>2021-22</td>
-                                    <td>PRATHAM GUPTA</td>
-                                    <td>190195302165</td>
-                                    <td>8557032988</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>7</td>
-                                    <td>2021-22</td>
-                                    <td>SHIVAM</td>
-                                    <td>190195302175</td>
-                                    <td>9729050300</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>8</td>
-                                    <td>2021-22</td>
-                                    <td>JASHANPREET</td>
-                                    <td>190195302149</td>
-                                    <td>9988523609</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>9</td>
-                                    <td>2021-22</td>
-                                    <td>SAURAVDEEP SINGH</td>
-                                    <td>190195380401</td>
-                                    <td>7508071179</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>10</td>
-                                    <td>2021-22</td>
-                                    <td>AMANDEEP SINGH</td>
-                                    <td>190195302125</td>
-                                    <td>9530617037</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>11</td>
-                                    <td>2021-22</td>
-                                    <td>AMANDEEP KUMAR</td>
-                                    <td>190195302124</td>
-                                    <td>6284096926</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>12</td>
-                                    <td>2021-22</td>
-                                    <td>SHUBHAM KUMAR</td>
-                                    <td>190195380402</td>
-                                    <td>9877788762</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>13</td>
-                                    <td>2021-22</td>
-                                    <td>HAPPY SINGH</td>
-                                    <td>190195302143</td>
-                                    <td>8699017727</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>14</td>
-                                    <td>2021-22</td>
-                                    <td>SAGAR</td>
-                                    <td>190195302170</td>
-                                    <td>6280975062</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>15</td>
-                                    <td>2021-22</td>
-                                    <td>SAJAN NANDA</td>
-                                    <td>190195302171</td>
-                                    <td>7717655656</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>16</td>
-                                    <td>2021-22</td>
-                                    <td>JAGJEET SINGH</td>
-                                    <td>190195380399</td>
-                                    <td>9501705411</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>17</td>
-                                    <td>2021-22</td>
-                                    <td>ADITYA</td>
-                                    <td>190195302121</td>
-                                    <td>8557828504</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td>18</td>
-                                    <td>2021-22</td>
-                                    <td>VIJAYPARTAP SINGH</td>
-                                    <td>190195302181</td>
-                                    <td>8872797095</td>
-                                    <td>KRISHNA MARUTI PVT. LTD. MANESAR (HR)</td>
-                                    <td>1.71</td>
-                                </tr>
-                                <tr>
-                                    <td colspan="7"><hr/></td>
-                                </tr>
+
     <tr>
         <td>1</td>
         <td>2020-2021</td>
@@ -998,6 +927,55 @@
                              </tr>
                             </thead>
                              <tbody>
+                                <tr>
+    <td>1</td>
+    <td>LANDFORCE DASMESH MECHANICAL WORKS </td>
+    <td>2024-25</td>
+    <td>9</td>
+    <td>1.86</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>INSTITUTE OF SKILL DEVELOPMENT &amp; VOCATIONAL TRAINING</td>
+    <td>2024-25</td>
+    <td>1</td>
+    <td>1.2</td>
+  </tr>
+
+  <tr>
+    <td colspan="5"><hr/></td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>Raja M Hyundai</td>
+    <td>2023-24</td>
+    <td>5</td>
+    <td>1.5</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Armaan Cutter Works</td>
+    <td>2023-24</td>
+    <td>3</td>
+    <td>1.5</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>Technospace Pvt. Ltd.</td>
+    <td>2023-24</td>
+    <td>5</td>
+    <td>1.5</td>
+  </tr>
+   <tr>
+    <td>4</td>
+    <td>Verma Builders & Developers</td>
+    <td>2023-24</td>
+    <td>2</td>
+    <td>1.5</td>
+  </tr>
+   <tr>
+    <td colspan="5"><hr/></td>
+  </tr>
                               <tr>
                                 <td>1</td>
                                 <td>Krishna Maruti Pvt. Ltd Manasa</td>
