--- a/departments/pie/faculty.html
+++ b/departments/pie/faculty.html
@@ -212,6 +212,36 @@
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/sarabjit.jpg" alt="Avatar">
+                                <h3>Er. Sarabjeet Kaur</h3>
+                                <h5 style="color:white;">Head of Department</h5>
+                              </div>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">B.Tech.<br/>
+                                      M.Tech.</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;">IRRIGATION & HYDRAULICS</h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:sarabjit.kaur73@punjab.gov.in">
+                                        <img src="../../assets/images/email.svg" alt=""
+                                        srcset="">
+                                    </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/rupinder.jpg" alt="Avatar">
                                 <h3>Dr.Rupinder Singh Chahal</h3>
                                 <h5 style="color:white;">Sen. Lecturer</h5>
