placements done except mechanical to verify, asked sarabjit and bhullaer to provide emaIL IDS

--- a/departments/pie/placement.html
+++ b/departments/pie/placement.html
@@ -134,7 +134,7 @@
                   <ul class="sub-menu">
                     <li><a href="../../facilities/src_clubs/home.html">SRC Clubs</a></li>
                     <li><a href="../../facilities/library.html">Library</a></li>
-                    <li><a href="../../facilities/hostel.html">Hostel</a></li>
+
                     <li><a href="../../facilities/sports_nss/home.html">Sports &amp; NSS</a></li>
                     <li><a href="../../facilities/canteen.html">Canteen</a></li>
                     <li><a href="../../departments/workshop/home.html">Workshops</a></li>
@@ -224,8 +224,90 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                 <tr>
+    <td>1</td>
+    <td>2024-25</td>
+    <td>PRINCE KUMAR</td>
+    <td>220195512212</td>
+    <td>7903996507</td>
+    <td>BATHINDA CERMICS (P)&nbsp;&nbsp;LTD, BATHINDA</td>
+    <td>1.8</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2024-25</td>
+    <td>RAJVEER SINGH</td>
+    <td>220195512213</td>
+    <td>7307442339</td>
+    <td>BATHINDA CERMICS (P)&nbsp;&nbsp;LTD, BATHINDA</td>
+    <td>1.8</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2024-25</td>
+    <td>VIKAS</td>
+    <td>220195512216</td>
+    <td>9780954384</td>
+    <td>KRISHNA MARUTI LIMITED PLASTIC VIIII, IMT KHARKHODA, SONIPAT HARYANA</td>
+    <td>2.1</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2024-25</td>
+    <td>LOVEPREET SINGH</td>
+    <td>220195512210</td>
+    <td>7347624096</td>
+    <td>KRISHNA MARUTI LIMITED PLASTIC VIIII, IMT KHARKHODA, SONIPAT HARYANA</td>
+    <td>2.1</td>
+  </tr>
 
-
+  <tr><td colspan="7"><hr/></td></tr>
+  <tr>
+    <td>1</td>
+    <td>2023-24</td>
+    <td>AYUSH KUMAR </td>
+    <td>210195584786</td>
+    <td>9548460137</td>
+    <td>BATHINDA CERMICS (P)&nbsp;&nbsp;LTD, BATHINDA</td>
+    <td>1.62</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>2023-24</td>
+    <td>TARUN SHARMA </td>
+    <td>210195584788</td>
+    <td>8847032503</td>
+    <td>BATHINDA CERMICS (P)&nbsp;&nbsp;LTD, BATHINDA</td>
+    <td>1.62</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>2023-24</td>
+    <td>SURAJ </td>
+    <td>210195501879</td>
+    <td>6239245127</td>
+    <td>KRISHNA MARUTI LIMITED PLASTIC VIIII, IMT KHARKHODA, SONIPAT HARYANA</td>
+    <td>2.1</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>2023-24</td>
+    <td>LOKESH SAGGU</td>
+    <td>210195501873</td>
+    <td>7717313567</td>
+    <td>KRISHNA MARUTI LIMITED PLASTIC VIIII, IMT KHARKHODA, SONIPAT HARYANA</td>
+    <td>2.1</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>2023-24</td>
+    <td>SHIVPARKASH</td>
+    <td>210195501877</td>
+    <td>8872573139</td>
+    <td>KRISHNA MARUTI LIMITED PLASTIC VIIII, IMT KHARKHODA, SONIPAT HARYANA</td>
+    <td>2.1</td>
+  </tr>
+ <tr><td colspan="7"><hr/></td></tr>
                               <tr>
                                 <td>1</td>
                                 <td>2022-23</td>
@@ -289,8 +371,9 @@
                                 <td>SUPER&nbsp;&nbsp;&nbsp;AUTOS BATHINDA</td>
                                 <td>1.2</td>
                               </tr>
+                               <tr><td colspan="7"><hr/></td></tr>
                                 <tr>
-        <td>8</td>
+        <td>1</td>
         <td>2021-22</td>
         <td>DEEPAK KUMAR</td>
         <td>190195502187</td>
@@ -299,7 +382,7 @@
         <td>1.68</td>
     </tr>
     <tr>
-        <td>9</td>
+        <td>2</td>
         <td>2021-22</td>
         <td>NIRMAL SINGH</td>
         <td>190195502194</td>
@@ -308,7 +391,7 @@
         <td>1.68</td>
     </tr>
     <tr>
-        <td>10</td>
+        <td>3</td>
         <td>2021-22</td>
         <td>LOVE SINGLA</td>
         <td>190195502190</td>
@@ -317,7 +400,7 @@
         <td>1.68</td>
     </tr>
     <tr>
-        <td>11</td>
+        <td>4</td>
         <td>2021-22</td>
         <td>JAGJEET SINGH</td>
         <td>190195580410</td>
@@ -326,7 +409,7 @@
         <td>1.74</td>
     </tr>
     <tr>
-        <td>12</td>
+        <td>5</td>
         <td>2021-22</td>
         <td>YASH SINGH</td>
         <td>190195502199</td>
@@ -335,7 +418,7 @@
         <td>1.74</td>
     </tr>
     <tr>
-        <td>13</td>
+        <td>6</td>
         <td>2021-22</td>
         <td>RAJPREET SINGH</td>
         <td>190195580415</td>
@@ -344,7 +427,7 @@
         <td>1.74</td>
     </tr>
     <tr>
-        <td>14</td>
+        <td>7</td>
         <td>2021-22</td>
         <td>MANMOHAN SINGH</td>
         <td>190195502192</td>
@@ -353,7 +436,7 @@
         <td>1.74</td>
     </tr>
     <tr>
-        <td>15</td>
+        <td>8</td>
         <td>2021-22</td>
         <td>BALPREET SINGH</td>
         <td>190195502186</td>
@@ -362,7 +445,7 @@
         <td>1.74</td>
     </tr>
     <tr>
-        <td>16</td>
+        <td>9</td>
         <td>2021-22</td>
         <td>ASHISH ANAND</td>
         <td>190195580406</td>
@@ -371,7 +454,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>17</td>
+        <td>10</td>
         <td>2021-22</td>
         <td>UDAY KUMAR</td>
         <td>190195580417</td>
@@ -380,7 +463,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-      <td>18</td>
+      <td>11</td>
       <td>2021-22</td>
       <td>SURAJ</td>
       <td>190195580416</td>
@@ -389,7 +472,7 @@
       <td>2</td>
   </tr>
   <tr>
-    <td>19</td>
+    <td>12</td>
     <td>2021-22</td>
     <td>JEEWAN SINGH</td>
     <td>190195580412</td>
@@ -397,8 +480,9 @@
     <td>KOYO BEARINGS</td>
     <td>2</td>
 </tr>
+ <tr><td colspan="7"><hr/></td></tr>
     <tr>
-        <td>20</td>
+        <td>1</td>
         <td>2020-21</td>
         <td>MAHEER GOGIA</td>
         <td>180195502417</td>
@@ -407,7 +491,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>21</td>
+        <td>2</td>
         <td>2020-21</td>
         <td>SAURAV GARG</td>
         <td>180195502411</td>
@@ -415,8 +499,9 @@
         <td>CAPITAL TRADERS</td>
         <td>1.2</td>
     </tr>
+     <tr><td colspan="7"><hr/></td></tr>
     <tr>
-        <td>22</td>
+        <td>1</td>
         <td>2019-20</td>
         <td>ARUN KUMAR</td>
         <td>170195503147</td>
@@ -425,7 +510,7 @@
         <td>1.8</td>
     </tr>
     <tr>
-        <td>23</td>
+        <td>2</td>
         <td>2019-20</td>
         <td>JAGTAR SINGH</td>
         <td>170195503151</td>
@@ -434,7 +519,7 @@
         <td>1.14</td>
     </tr>
     <tr>
-        <td>24</td>
+        <td>3</td>
         <td>2019-20</td>
         <td>JASVEER SINGH</td>
         <td>170195503153</td>
@@ -443,7 +528,7 @@
         <td>1.14</td>
     </tr>
     <tr>
-        <td>25</td>
+        <td>4</td>
         <td>2019-20</td>
         <td>NACHHTAR SINGH</td>
         <td>170195570933</td>
@@ -452,7 +537,7 @@
         <td>1.2</td>
     </tr>
     <tr>
-        <td>26</td>
+        <td>5</td>
         <td>2019-20</td>
         <td>KHUSHPREET SINGH</td>
         <td>170195503155</td>
@@ -476,6 +561,36 @@
                              </tr>
                             </thead>
                              <tbody>
+                                <tr>
+    <td>1</td>
+    <td>BATHINDA CERMICS (P)&nbsp;&nbsp;LTD, BATHINDA</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>1.8</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>KRISHNA MARUTI LIMITED PLASTIC VIIII, IMT KHARKHODA, SONIPAT HARYANA</td>
+    <td>2024-25</td>
+    <td>2</td>
+    <td>2.1</td>
+  </tr>
+  <tr><td colspan="5"><hr/></td></tr>
+  <tr>
+    <td>1</td>
+    <td>BATHINDA CERMICS (P)&nbsp;&nbsp;LTD, BATHINDA</td>
+    <td>2023-24</td>
+    <td>2</td>
+    <td>1.62</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>KRISHNA MARUTI LIMITED PLASTIC VIIII, IMT KHARKHODA, SONIPAT HARYANA</td>
+    <td>2023-24</td>
+    <td>3</td>
+    <td>2.1</td>
+  </tr>
+   <tr><td colspan="5"><hr/></td></tr>
                               <tr>
                                 <td>1</td>
                                 <td>BATHINDA CERAMICS (P) LTD.</td>
@@ -490,57 +605,60 @@
                               <td>3</td>
                               <td>1.2</td>
                           </tr>
+                              <tr><td colspan="5"><hr/></td></tr>
                                  <tr>
-        <td>3</td>
+        <td>1</td>
         <td>Amrit Insulators Pvt. Ltd</td>
         <td>2021-22</td>
         <td>3</td>
         <td>1.68</td>
     </tr>
     <tr>
-        <td>4</td>
+        <td>2</td>
         <td>Krishna(KML SEATING)</td>
         <td>2021-22</td>
         <td>5</td>
         <td>1.74</td>
     </tr>
     <tr>
-        <td>5</td>
+        <td>3</td>
         <td>Sapphire Engg. Industry</td>
         <td>2021-22</td>
         <td>2</td>
         <td>1.2</td>
     </tr>
     <tr>
-      <td>6</td>
+      <td>4</td>
       <td>Koyo Bearing</td>
       <td>2021-22</td>
       <td>2</td>
       <td>2</td>
   </tr>
+    <tr><td colspan="5"><hr/></td></tr>
     <tr>
-        <td>7</td>
+        <td>1</td>
         <td>Capital Traders</td>
         <td>2020-21</td>
         <td>2</td>
         <td>1.2</td>
     </tr>
+      <tr><td colspan="5"><hr/></td></tr>
     <tr>
-        <td>8</td>
+        <td>1</td>
         <td>Koyo Bearing</td>
         <td>2019-20</td>
         <td>1</td>
         <td>1.8</td>
     </tr>
     <tr>
-        <td>9</td>
+        <td>2</td>
         <td>Capital Trader</td>
         <td>2019-20</td>
         <td>2</td>
         <td>1.14</td>
     </tr>
     <tr>
-        <td>10</td>
+        <td>3</td>
         <td>Sapphire Engg. Industry</td>
         <td>2019-20</td>
         <td>2</td>
