--- a/sub_header/disclosure.html
+++ b/sub_header/disclosure.html
@@ -93,7 +93,7 @@
                       <ul class="sub-menu">
                         <li><a href="src.html">SRC Clubs</a></li>
                         <li><a href="library.html">Library</a></li>
-                        <li><a href="hostels.html">Hostel</a></li>
+                        <li><a href="hostels.html">
                         <li><a href="sports.html">Sports &amp; NSS</a></li>
                         <li><a href="canteen.html">Canteen</a></li>
                         <li><a href="workshop.html">Workshops</a></li>
