some day disclosure, and downloads section to update

--- a/index.html
+++ b/index.html
@@ -75,14 +75,8 @@ https://templatemo.com/tm-569-edu-meeting
                 <i class="fa fa-briefcase">&nbsp;</i>
                 <a href="sub_header/citizen_charter.html">Citizen Charter &amp; RTI</a>
               </span>
-              <span style="padding-left:2%;">
-                <i class="fa fa-download">&nbsp;</i>
-                <a href="sub_header/disclosure.html">Disclosure</a>
-              </span>
-              <span style="padding-left:2%;">
-                <i class="fa fa-download">&nbsp;</i>
-                <a href="sub_header/downloads.html">Downloads</a>
-              </span>
+
+
               <span style="padding-left:2%;">
                 <i class="fa fa-graduation-cap">&nbsp;</i>
                 <a href="#scholarships_offered">Scholarships</a>
@@ -1540,6 +1534,21 @@ https://templatemo.com/tm-569-edu-meeting
                   <img src="assets/images/testimonials/right_floral.png" alt="" srcset="">
                 </span>
                 <span> GPC, Bathinda
+                </span>
+
+            </div>
+             <div class="testimonial-item">
+              <img src="assets/images/alumni/ravinderjeet_singh.jpeg" alt="" srcset="">
+              <h5>Ravinderjeet Singh</h5>
+              <h6>Batch (2009-2012)</h6>
+              <p>
+                I got selected in the Water Resources Department as a Junior Engineer. This journey from being a student to getting a government job taught me how important consistency, focus, and smart use of opportunities are. In 2022, I got my first promotion and currently, I’m working as a Sub Divisional Officer in the Water Resources Department.
+                </p>
+                <span>
+                  <img src="assets/images/testimonials/left_floral.png" alt="" srcset=""> SDO, Irrigation Department
+                  <img src="assets/images/testimonials/right_floral.png" alt="" srcset="">
+                </span>
+                <span> Water Resources Department, Punjab
                 </span>
 
             </div>
