--- a/departments/ce/laboratories.html
+++ b/departments/ce/laboratories.html
@@ -51,14 +51,8 @@
                 <i class="fa fa-briefcase">&nbsp;</i>
                 <a href="../../sub_header/citizen_charter.html">Citizen Charter &amp; RTI</a>
               </span>
-              <span style="padding-left:2%;">
-                <i class="fa fa-download">&nbsp;</i>
-                <a href="../../sub_header/disclosure.html">Disclosure</a>
-              </span>
-              <span style="padding-left:2%;">
-                <i class="fa fa-download">&nbsp;</i>
-                <a href="../../sub_header/downloads.html">Downloads</a>
-              </span>
+
+
               <span style="padding-left:2%;">
                 <i class="fa fa-graduation-cap">&nbsp;</i>
                 <a href="../../index.html#scholarships_offered">Scholarships</a>
@@ -234,13 +228,13 @@
                         <tr>
                           <th scope="row">2</th>
                           <td>Environment Engineering </td>
-                          <td>Er.Punit Gupta </td>
+                          <td>Er. Vidur Monga </td>
 
                         </tr>
                         <tr>
                           <th scope="row">3</th>
                           <td>CAD Lab</td>
-                          <td>Er. Punit Gupta</td>
+                          <td>Er. Jaspreet Singh</td>
 
                         </tr>
 
